			  subnet within one routing query reply (except on LANs).
			- Kad routing query contacts are checked against the
			  routing table.
		* Implemented non-interactive mode for amulecmd/amuleweb.
		* Fixed detection of crypto++ library for versions >= 5.6.0.
		* Fixed saving wrong window position when exiting while minimized.
		* Fixed rare case when we tried to connect to a LowID client.

	iz0bbz:
		* Fixed static linking with GeoIP on MinGW/MSYS.
		* Fixed detecting GeoIP library when building for MinGW.

	Stu Redman:
		* Fix crash on global search on Windows
		* Fix splitter bar position in transfer window not restored properly
		* Caught some insane upload requests
		* Fixed finished files sometimes getting rehashed (thanks to Skolnick)
		* Added restart warning if the ED2K network was re-enabled.
		* Fixed Windows lag when opening preferences dialog
		* Fixed creation of ED2K links with AICH (thanks to Archmage)
		* Remote Gui shows a dialog box with a reason on connection failure
		* Changed fix for wrong ordering/placing of clients in the download window
		  so that sort order is again like in 2.2.2.

	Wuischke:
		* Add Asturian language
		* Updated INSTALL file
		* When EC authentication fails, close connection before we send
		  the response.
		* Tell the user why the EC connection failed.

	Special Thanks To:
		* wires for the strenuous testing on 64-bit

--------------------------------------------------------------------------------

Version 2.2.3 - The "Late Christmas present" version.
----------
2008-12-28

	Alfred:
		* Fixes to compile with Sun Studio 12.

	Gerd78:
		* Fix for linking with a static bfd library.

	GonoszTopi:
		* Fixed improper handling of EC connection failures.
		* Fix for shells not properly handling empty lists.
		* POSIX fixes in shell code.
		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel